# EAT-inline

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  GOVERNANCE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  conformance.yml  docs.yml
benchmark/corpora/: comparison.jsonl  entity-registry.jsonl  generation.jsonl  manifest.json  resolution.jsonl  syntax.jsonl  type-vocabulary.json  typing.jsonl
benchmark/results/: wiki-fair-v2-tfidf-linker-run.json
benchmark/results/wiki-fair-v2-eat-assistance/: eat-assistance-results.json  eat-assistance-summary.md
benchmark/results/wiki-fair-v2-one-tag-rag/: one-tag-rag-results.json  one-tag-rag-summary.md
benchmark/results/wiki-fair-v2-scale-search/: scale-search-results.json  scale-search-summary.md
benchmark/results/wiki-fair-v2-tfidf/: recorded-linker-results.json  (+1 more)
schemas/: linker-run.schema.json  registry-entry.schema.json
scripts/: check_docs.py  prepare_wiki_fair.py  run_benchmark.py  run_comparative_benchmark.py  run_conformance.py  run_eat_assistance_benchmark.py  run_llm_linker.py  run_one_tag_rag_benchmark.py  run_recorded_linker_benchmark.py  run_scale_search_benchmark.py  run_spacy_linker.py  run_tfidf_linker.py  validate_dataset.py
src/: eat_baselines.py  eat_inline.py  eat_recorded_runs.py
tests/: test_eat_assistance.py  test_eat_baselines.py  test_eat_inline.py  test_eat_recorded_runs.py  test_llm_linker.py  test_one_tag_rag_benchmark.py  test_scale_search_benchmark.py  test_spacy_linker.py  test_tfidf_linker.py  test_wiki_fair_corpus.py
tests/conformance/: manifest.json
