[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eat-inline"
version = "0.3.2"
description = "Minimal reference implementation for the EAT Inline experimental candidate"
requires-python = ">=3.10"
authors = [
  { name = "Hans Visser", email = "info@eai-advies.nl" }
]

[tool.setuptools]
py-modules = ["eat_inline"]
package-dir = {"" = "src"}
