[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eat-inline"
version = "0.3.2"
description = "Minimal reference implementation for the EAT Inline experimental candidate"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Hans Visser", email = "info@eai-advies.nl" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[tool.setuptools]
py-modules = ["eat_inline"]
package-dir = {"" = "src"}
